microk8s/deepdetectgpu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: deepdetectgpu
    release-version: "1.0"
  name: deepdetectgpu
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: deepdetectgpu
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --volumes hostPath convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: deepdetectgpu
    spec:
      containers:
        - image: localhost:32000/deepdetectgpu
          name: deepdetectgpu
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /home/alice/ownCloud/
              name: deepdetectgpu-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/alice/ownCloud/
          name: deepdetectgpu-hostpath0
status: {}
