microk8s/elasticsearch1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch1
    release-version: "1.0"
  name: elasticsearch1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --volumes hostPath convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: elasticsearch1
    spec:
      containers:
        - env:
            - name: cluster.name
              value: docker-cluster
          image: localhost:32000/elasticsearch1
          name: elasticsearch1
          ports:
            - containerPort: 9200
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data/
              name: elasticsearch1-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/alice/esdata/
          name: elasticsearch1-hostpath0
status: {}
