microk8s/es-init-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: es-init
    release-version: "1.0"
  name: es-init
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es-init
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --volumes hostPath convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: es-init
    spec:
      containers:
        - env:
            - name: ES_URL
              value: http://elasticsearch1:9200
          image: localhost:32000/es-init
          name: es-init
          resources: {}
      restartPolicy: Always
status: {}
