microk8s/fscrawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: fscrawler
  name: fscrawler
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fscrawler
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --volumes hostPath convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: fscrawler
    spec:
      containers:
        - args:
            - --trace
            - --config_dir
            - /usr/share/fscrawler/config
            - docker-compose
          image: localhost:32000/fscrawler
          name: fscrawler
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/fscrawler/data/
              name: fscrawler-hostpath0
              readOnly: true
            - mountPath: /usr/share/fscrawler/config-mount/docker-compose
              name: fscrawler-hostpath1
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/alice/ownCloud/
          name: fscrawler-hostpath0
        - hostPath:
#           path: /media/tb2/docker-fscrawler/config/docker-compose
            path: /home/alice/git3/docker-fscrawler/config/docker-compose
          name: fscrawler-hostpath1
status: {}
