microk8s/deepdetectgpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: deepdetectgpu
    release-version: "1.0"
  name: deepdetectgpu
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 30801
  selector:
    io.kompose.service: deepdetectgpu
status:
  loadBalancer: {}
