microk8s/elasticsearch1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch1
    release-version: 1.0
  name: elasticsearch1
spec:
  type: NodePort
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
      nodePort: 30920
  selector:
    io.kompose.service: elasticsearch1
status:
  loadBalancer: {}
