microk8s/fileserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --volumes hostPath convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: fileserver
    release-version: 1.0
  name: fileserver
spec:
  type: NodePort
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      nodePort: 30001
  selector:
    io.kompose.service: fileserver
status:
  loadBalancer: {}
